Resize correctly on mobile

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -102,3 +102,18 @@ footer {
     }
 }
 
+
+.sponsor {
+
+    &#bcs {
+        img {
+            // Arbitrary - seems to work
+            width: 78px;
+        }
+    }
+    img {
+        @media #{$small-only} {
+            width: 100% !important;
+        }
+    }
+}
